# Text_File_Search_Tool

./: README.md  pyproject.toml
text_file_search_tool/: _init_.py  cli.py  main.py
